tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__audit_log_test__audit_log_disabled.snap
---
source: tests/snapshot_tests/screens/audit_log_test.rs
expression: backend
---
"  Audit Log Audit Disabled                                               0 recor"
"┌ Operation ─┐┌ Time Range ┐┌ Search ──────────────────────────────────────────┐"
"│  All       ││  All Time  ││  Enter keywords...                               │"
"└────────────┘└────────────┘└──────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                           ⚠ Audit logging is disabled                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ↑↓/j/k Select  │  Tab Switch Area  │  Enter View Record  │  Esc Back           "
