tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__audit_log_test__audit_log_empty.snap
---
source: tests/snapshot_tests/screens/audit_log_test.rs
expression: backend
---
" Audit Log                                               0 records              "
"┌ Operation ─┐┌ Time Range ┐┌ Search ──────────────────────────────────────────┐"
"│  All       ││  All Time  ││  Enter keywords...                               │"
"└────────────┘└────────────┘└──────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                 ℹ No audit logs                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ↑↓/j/k Select  │  Tab Switch Area  │  Enter View Record  │  Esc Back           "
