tests/snapshot_tests/screens/snapshots/snapshot_tests__screens__audit_log_test__audit_log_populated_list_focused.snap
---
source: tests/snapshot_tests/screens/audit_log_test.rs
expression: backend
---
" Audit Log                                               3 records              "
"┌ Operation ─┐┌ Time Range ┐┌ Search ──────────────────────────────────────────┐"
"│  All       ││  All Time  ││  Enter keywords...                               │"
"└────────────┘└────────────┘└──────────────────────────────────────────────────┘"
" 05-20 09:00 [Unlocked] (no record name)                                        "
" 05-20 09:05 [Added ] Gmail Login - Created credential for Gmail                "
" 05-20 09:10 [Viewed Password] Gmail Login                                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ↑↓/j/k Select  │  Tab Switch Area  │  Enter View Record  │  Esc Back           "
